infrastructure/kubernetes/tenants/dashboard/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: dashboard
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      serviceAccountName: homepage-sa
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:v1.13.2@sha256:a0b71c8e757298d02560186bab9fbe3fc2d375c523a62cc1019177b37e48aa28
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/settings.yaml
          subPath: settings.yaml
        - name: config-volume
          mountPath: /app/config/services.yaml
          subPath: services.yaml
        - name: config-volume
          mountPath: /app/config/kubernetes.yaml
          subPath: kubernetes.yaml
        - name: config-volume
          mountPath: /app/config/bookmarks.yaml
          subPath: bookmarks.yaml
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
      volumes:
      - name: config-volume
        configMap:
          name: dashboard-config
