infrastructure/kubernetes/tenants/dashboard/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
